<resources>
    <string name="app_name">Pendulum</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="mass_kg">Mass (kg)</string>
    <string name="gravity_m_s">Gravity (m/s²)</string>
    <string name="velocity_s">Velocity (°/s)</string>
    <string name="friction">Friction</string>
    <string name="angle">Angle (°)</string>
    <string name="length_m">Length (m)</string>
    <string name="error">Error</string>
    <string name="check_inputs">Check your inputs</string>
    <string name="icon_credits">Icon made by Smashicons from www.flaticon.com</string>
</resources>
